# PindolesEncastats

./: .clang-format  README.md
ApiDesign/: CMakeLists.txt  README.md
ApiDesign/src/: main.cpp
BitsAndTemplates/: README.md
BitsAndTemplates/src/: main.cpp
Bits_Checksums/bits/: CMakeLists.txt  README.md
Bits_Checksums/checksums/: CMakeLists.txt  README.md
Bits_Checksums/checksums/src/: main.cpp
Bits_Checksums/compression/: CMakeLists.txt
Bits_Checksums/compression/src/: main.cpp
Constructors/: CMakeLists.txt  README.md
Constructors/src/: main  main.cpp
CppPythongRpc/: .gitignore  README.md  algorithm_client.py  algorithm_server.cpp  build.sh  generate_proto_files.sh  install_dependencies.sh
CppPythongRpc/cpp_server/: algorithm_server.cpp
CppPythongRpc/protos/: algorithm.proto
LinkList/: CMakeLists.txt  README.md
LinkList/src/: main.cpp  slinklist.hpp
Monads/: CMakeLists.txt  README.md
Monads/src/: main.cpp
Mutex_RAII_Cpp/: CMakeLists.txt
Mutex_RAII_Cpp/src/: Mutex.hpp  main.cpp
Mutex_RAII_Cpp_Pimpl/: CMakeLists.txt  README.md
Mutex_RAII_Cpp_Pimpl/docs/: class_diagram.puml  readme.md
Mutex_RAII_Cpp_Pimpl/src/: amutex.cpp  amutex.hpp  amutex_pimpl.hpp  main.cpp
Mutex_RAII_Cpp_Pimpl/src/amutex/: CMakeLists.txt
Mutex_RAII_Cpp_Pimpl/src/amutex/iface/: IAMutex.hpp  amutex.hpp  amutex_base.hpp  amutex_pimpl.hpp
Mutex_RAII_Cpp_Pimpl/src/amutex/impl/: IAMutex.hpp  IAMutexFactory.hpp  amutex.cpp  amutex_base.hpp
Mutex_RAII_Cpp_Pimpl/src/amutex/impl/cmsis_v2/: cmsisv2_amutex.hpp
Mutex_RAII_Cpp_Pimpl/src/amutex/impl/posix/: posix_amutex.cpp  posix_amutex.hpp
Mutex_RAII_Cpp_Pimpl/src/impl/posix/: posix_amutex.hpp
Queue/: CMakeLists.txt  README.md
Queue/src/: ThreadSafeQueue.hpp  main.cpp
Ranges/: CMakeLists.txt  README.md
Ranges/src/: main.cpp
Smart_pointer/: CMakeLists.txt  README.md
Smart_pointer/src/: main.cpp  main_test.cpp
Smart_pointer/src/own_impl/: README.md
Smart_pointer/src/shared_ptr_in_share_ptr/: CMakeLists.txt  README.md
Smart_pointer/src/shared_ptr_in_share_ptr/src/: main.cpp
Templates/: CMakeLists.txt
Templates/src/: main.cpp
Variant/: CMakeLists.txt  a.out
Variant/src/: main.cpp
algo/search_occurrences/: CMakeLists.txt  README.md
algo/search_occurrences/src/: main.cpp
cpp_safety_checks/: CMakeLists.txt  README.md  cpp_recomendations.txt
cpp_safety_checks/src/: main.cpp
misc/operators/: CMakeLists.txt
misc/operators/src/: main.cpp
